# ert

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTINUOUS_COMPARISON.md  Cargo.toml  LICENSE  MANUAL.md  README.md
.github/workflows/: release.yml
src/: agnostic.rs  analyze_binary.rs  analyze_continuous.rs  analyze_deaths.rs  analyze_multistate.rs  analyze_survival.rs  binary.rs  compare_methods.rs  continuous.rs  deaths_only.rs  ert_core.rs  main.rs  multistate.rs  multistate_experiment.rs  survival.rs
